xfce/Dockerfile updated

--- a/xfce/Dockerfile
+++ b/xfce/Dockerfile
@@ -63,7 +63,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
  locales fonts-liberation fonts-noto-cjk fonts-ipafont fonts-takao \
  && locale-gen ja_JP.UTF-8 \
  && update-locale LANG=ja_JP.UTF-8 \
- && echo "Google Chrome"
+ && echo "Google Chrome" \
  && apt-get install -y --no-install-recommends \
  ca-certificates curl wget libu2f-udev \
  && curl -sLO "https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb" \
@@ -72,7 +72,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
  && sed -i \
     's#^Exec=.*#Exec=/usr/local/bin/wrapped-google-chrome-stable#g' \
     /usr/share/applications/*hrome.desktop \
- && echo 'IDE'
+ && echo 'IDE' \
  && apt-get install -y --no-install-recommends \
  vim git tmux terminator xdotool x11-apps imagemagick ffmpeg \
  && curl -fsSL https://code-server.dev/install.sh | bash \
